# system-monitoring-api-rust

./: .gitignore  Cargo.toml  example.config.toml  tmux-session.sh
logger_app/: Cargo.toml
logger_app/src/: main.rs  tasks.rs
logger_app/src/tasks/: log_cpu.rs  log_ram.rs
src/: handlers.rs  main.rs  repository.rs  routes.rs  services.rs
src/handlers/: system_handler.rs
src/repository/: system_info.rs
src/routes/: health.rs  system.rs
src/services/: database.rs  system_info.rs
