[package]
name = "axum_monitoring_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.1"
hyper = { version = "0.14.27", features = ["full"] }
sysinfo = "0.33.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.13"
tower = "0.4.13"

[env]
INFLUX_CONNNECTION_STRING = "value"
