[package]
name = "axum_monitoring_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "=0.8.1"
chrono = "0.4.40"
futures = "0.3.31"
hyper = { version = "0.14.27", features = ["full"] }
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
num-traits = "0.2.19"
serde = "1.0.219"
sysinfo = "0.33.1"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
